# labust-ros-pkg

./: .clang-format  .gitignore  .travis.yml  LICENSE  README.md  dependencies.rosinstall  repository.rosinstall
allocation/labust_allocation/: CMakeLists.txt  package.xml
allocation/labust_allocation/launch/: qp_alloc_test.launch
allocation/labust_allocation/src/allocation_node/: allocation_node.cpp
allocation/labust_allocation/src/labust_allocation/: thruster_configuration.cpp  x2d_adaptive.cpp  x2d_vp.cpp
allocation/labust_allocation/src/test/: qp_solver.cpp
control/labust_control/: CMakeLists.txt
control/labust_control/cfg/: VelCon.cfg
control/labust_control/src/: ALTControl.cpp  AsyncMerger.cpp  DepthControl.cpp  FADPControl.cpp  FADP_3DControl.cpp  HDGControl.cpp  LAUVManual.cpp  NuManual.cpp  PitchControl.cpp  RefManual.cpp  VelocityControl.cpp  diver_navsts.cpp  navstsreq_navsts.cpp
control/labust_control/src/line_following/: UALFControl.cpp
control/labust_control/src/manual_control/: manual_control.cpp
control/labust_es_control/: CMakeLists.txt  package.xml
control/labust_es_control/cfg/: TDOASSControl.cfg
diagnostic/labust_diagnostics/: CMakeLists.txt  setup.py
diagnostic/labust_diagnostics/launch/: battery_monitor.launch
diagnostic/labust_diagnostics/scripts/: battery_monitor.py
diagnostic/labust_diagnostics/src/: StatusHandler.cpp
ident_so/: CMakeLists.txt  package.xml
ident_so/src/: SOIdentification.cpp
identification/labust_iso/: CMakeLists.txt  package.xml
identification/labust_iso/src/: IdentificationNode.cpp  SOIdentification.cpp
labust_control/: CMakeLists.txt  package.xml
labust_control/cfg/: ESControl.cfg  ESControlBounded.cfg  TDOASSControl.cfg
labust_control/src/: ALTControl.cpp  DepthControl.cpp  FADPControl.cpp  HDGControl.cpp  LAUVManual.cpp  RefManual.cpp  VelocityControl.cpp  diver_navsts.cpp  navstsreq_navsts.cpp
labust_control/src/esc/: ESCControlClassic_UV.cpp
labust_control/src/esctoolkit/: esc_classic.cpp
labust_control/src/line_following/: UALFControl.cpp
labust_control/src/pidtoolkit/: PIFFController.c
labust_control/src/tdoass/: tdoass_control.cpp  tdoass_node.cpp  tdoass_test.py
labust_control/src/virtual_target/: vt_control.cpp
labust_diagnostics/: CMakeLists.txt  package.xml
labust_diagnostics/launch/: thruster_diagnostic.launch  wifi_monitor.launch
labust_diagnostics/scripts/: battery_monitor.py  read_wifi_info.sh  rosbag_monitor.py  thruster_diagnostic.py  wifi_monitor.py
labust_diagnostics/src/: StatusHandler.py  diagnostic_node.cpp
labust_diagnostics/src/labust_diagnostics/: StatusHandler.py
labust_execution/: CMakeLists.txt
labust_mission/: CMakeLists.txt  package.xml
labust_mission/cmake/: FindGeographicLib.cmake
labust_mission/data/: pointer_1463654592.763222588.xml
labust_mission/include/labust_mission/: controllerManager.hpp  dataManager.hpp  labustMission.hpp  lowLevelConfigure.hpp  maneuverGenerator.hpp  missionExecution.hpp  primitiveManager.hpp  utils.hpp  xmlPrinter.hpp
labust_mission/include/robot_task/: RobotTask.h
labust_mission/src/: caddy_missions.cpp  commander.cpp  data_event_manager.cpp  mission_exec.cpp  mission_execution.cpp  mission_parser.cpp  neptus_parser.cpp
labust_mission/src/decision_making/: ROSTask.cpp
labust_primitives/: CMakeLists.txt  package.xml
labust_primitives/data/: primitiveDefinitions.xml
labust_primitives/src/: docking.cpp  dynamic_positioning.cpp  go2point.cpp  track_diver.cpp
labust_sim/: CMakeLists.txt  package.xml
labust_sim/launch/: basic_sim.launch  model.yaml
labust_sim/src/: kinematic_sim.py
labust_sim/src/data_sim/: USBLSim.cpp  tdoa_sim.cpp
labust_sim/src/diver_sim/: diver_marker.cpp  diver_sim.cpp  transect_experiment.cpp  virtual_diver.cpp
labust_sim/src/labust_sim/: RBModel.cpp
labust_sim/src/navsts2odom/: navsts2gazebo.py  navsts2odom.cpp
labust_sim/src/sim_sensors/: DvlSim.cpp  GPSSim.cpp  ImuSim.cpp  SonarSim.cpp
labust_sim/src/test/: uvsim_timing.cpp
labust_sim/src/uvsim/: SimCore.cpp
mission/labust_mission/: CMakeLists.txt  package.xml
mission/labust_mission/src/: caddy_missions.cpp  commander.cpp  data_event_manager.cpp  mission_execution.cpp  mission_parser.cpp
navigation/labust_geo/: CMakeLists.txt  package.xml
navigation/labust_geo/cmake/: FindGeographicLib.cmake
navigation/labust_geo/src/: odom_to_navsts_node.cpp  tf_publish_node.cpp
navigation/labust_navigation/: CMakeLists.txt  package.xml
navigation/labust_navigation/cmake/: FindGeographicLib.cmake
navigation/labust_navigation/launch/: nav_offline.launch
primitive/labust_course_keeping/: CMakeLists.txt  package.xml
primitive/labust_course_keeping/src/: course_keeping.cpp
primitive/labust_docking/: CMakeLists.txt  package.xml
primitive/labust_docking/src/: docking.cpp
primitive/labust_dynamic_positioning/: CMakeLists.txt  package.xml
primitive/labust_dynamic_positioning/src/: dynamic_positioning.cpp
primitive/labust_go2point/: CMakeLists.txt  package.xml
primitive/labust_go2point/src/: go2point.cpp
primitive/labust_pointer/: CMakeLists.txt  package.xml
primitive/labust_pointer/src/: track_diver.cpp
primitive/labust_primitive/: CMakeLists.txt  package.xml
primitive/labust_primitive/data/: primitiveDefinitions.xml
simulation/labust_acoustic_sim/: CMakeLists.txt  package.xml
simulation/labust_acoustic_sim/src/: range_sim_node.cpp  tdoa_sim_node.cpp  usbl_sim_node.cpp
simulation/labust_basic_sim/: CMakeLists.txt  package.xml
simulation/labust_basic_sim/src/: dvl_sim_node.cpp  gps_sim_node.cpp  imu_sim_node.cpp
simulation/labust_diver_sim/: CMakeLists.txt  package.xml
simulation/labust_diver_sim/src/: diver_sim_node.cpp  virtual_diver.cpp
simulation/labust_sim_core/: CMakeLists.txt  package.xml
simulation/labust_sim_core/src/: sim_core_node.cpp
simulation/labust_vision_sim/: CMakeLists.txt  package.xml
simulation/labust_vision_sim/src/: sonar_sim_node.cpp
utilities/snippets/: CMakeLists.txt  package.xml
utilities/snippets/launch/: morus_message.yaml
(+192 files in other folders)
